--- a/src/client/src/containers/ProjectNameAndOutput/styles.module.css
+++ b/src/client/src/containers/ProjectNameAndOutput/styles.module.css
@@ -41,7 +41,6 @@
   justify-content: space-between;
   align-items: center;
   padding: 0px 10px;
-  border-radius: 2px;
   opacity: 50%;
   min-height: 38px;
 }
